--- a/public/html/client.html
+++ b/public/html/client.html
@@ -15,27 +15,26 @@
   <body>
     <div class="chat chat_support" id="chat_in_support">
       <div class="in_support_header">
-        <span>Em suporte ... </span>
+        <span>Online Support ... </span>
         <div class="icon_close" onclick="closeChat();">
           <img src="/images/close.png" />
         </div>
       </div>
 
       <div class="text_support">
-        <script id="email-template" type="text/template">
+        <script id="message-user-template" type="text/template">
           <div class="client">
             <span class="name">{{email}}</span>
-        </script>
-        <script id="message-user-template" type="text/template">
             <span class="client message">
               {{message}}
               <!-- <label class="date">{{date}}</label> -->
             </span>
           </div>
         </script>
+
         <script id="admin-template" type="text/template">
           <div class="admin">
-            <span class="admin_name">Atendente</span>
+            <span class="admin_name">Admin</span>
             <span class="admin message"> {{message_admin}} </span>
             <!-- <label class="date">{{date}}</label> -->
           </div>
@@ -43,10 +42,11 @@
         <div id="messages" class="chat__messages"></div>
         <!-- <div class="line"></div> -->
       </div>
+
       <div class="message_send">
         <input
           type="text"
-          placeholder="Digite sua mensagem aqui"
+          placeholder="Write your message here"
           id="message_user"
         />
         <div class="send_message_button" id="send_message_button">
@@ -57,14 +57,14 @@
 
     <div class="chat chat_support" id="chat_help">
       <div class="in_support_header">
-        <span>Iniciar um chat de suporte</span>
+        <span>Start a support chat</span>
         <div class="icon_close" onclick="closeChat();">
           <img src="/images/close.png" />
         </div>
       </div>
       <div class="text_support text_help">
         <div class="text_help">
-          <span>Como podemos te ajudar?</span>
+          <span>How can we help you?</span>
           <textarea
             name="txt_help"
             id="txt_help"
@@ -74,54 +74,54 @@
             maxlength="250"
           ></textarea>
           <span class="charac_remaining">
-            <label id="charac_remaining">250</label> caracteres restantes</span
+            <label id="charac_remaining">250</label> remaining characters</span
           >
         </div>
 
         <div class="first_email">
-          <span>Seu e-mail</span>
+          <span>Your email</span>
           <input type="text" name="" id="email" />
         </div>
 
         <div class="button">
-          <button class="btn_cancel">Cancelar</button>
-          <button class="btn_start_chat" id="start_chat">Iniciar chat</button>
+          <button class="btn_cancel">Cancel</button>
+          <button class="btn_start_chat" id="start_chat">Start chat</button>
         </div>
       </div>
     </div>
 
     <div>
       <button class="btn_support" id="btn_support" onclick="openChat();">
-        <img src="/images/chat.png" /> Suporte
+        <img src="/images/chat.png" /> Support
       </button>
     </div>
   </body>
 
   <script>
     onLoad();
-    const chat = document.getElementById("chat_help");
+    const chat = document.getElementById('chat_help');
 
     function onLoad() {
-      fetch("http://localhost:3333/settings/admin").then((result) =>
+      fetch('http://localhost:3333/settings/admin').then((result) =>
         result.json().then((response) => {
-          const buttonSupport = document.getElementById("btn_support");
+          const buttonSupport = document.getElementById('btn_support');
           if (!response.chat) {
-            buttonSupport.style.display = "none";
+            buttonSupport.style.display = 'none';
           }
         })
       );
     }
 
     function openChat() {
-      chat.style.display = "block";
+      chat.style.display = 'block';
     }
 
     function closeChat() {
-      chat.style.display = "none";
+      chat.style.display = 'none';
     }
 
     function keyUpTextHelp(event) {
-      const charac_remaining = document.getElementById("charac_remaining");
+      const charac_remaining = document.getElementById('charac_remaining');
       const length_text = event.target.value.length;
       charac_remaining.innerHTML = Number(250) - Number(length_text);
     }
